--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -90,123 +90,123 @@
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
                   <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+               <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+               <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+               <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 </<br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+               <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+               <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                <br><span class="text"></span>
             </li>
         
         </ul>
