--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,7 +55,7 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
         <ul class="row first">
-            <li>
+            <li class="text-center">
                 <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="text"></span>
             </li>
