--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -81,23 +81,23 @@
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="308px" height="240px" alt="Line For Food 1"  src="images/Line_For_Food-1.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="182px" height="240px" alt="Valentine"  src="images/Valentine.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="192px" height="240px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="188px" height="240px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="182" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
@@ -211,68 +211,7 @@
         
         </ul>
 
-        <!--<div class="row">
-          <div class="col-lg-12">
-            <h2 class="page-header text-center">Current Artwork</h2>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/selfport_striped_shirt.jpg" data-image-id="" data-toggle="modal" data-title="Selfport Striped Shirt" data-caption="" data-image="images/selfport_striped_shirt.jpg" data-target="#image-gallery">
-                <br><img width="91px" height="120px" src="images/selfport_striped_shirt.jpg" class="modal-content img-responsive" title="Selfport Striped Shirt"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Self_Portrait_With_Coffee_Cup.jpg" data-image-id="" data-toggle="modal" data-title="Self Portrait With Coffee Cup" data-caption="" data-image="images/Self_Portrait_With_Coffee_Cup.jpg" data-target="#image-gallery">
-                <br><img width="75px" height="120px" src="images/Self_Portrait_With_Coffee_Cup.jpg" class="modal-content img-responsive" title="Self Portrait With Coffee Cup"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Self_Portrait_Yellow_Shirt.jpg" data-image-id="" data-toggle="modal" data-title="Self Portrait Yellow Shirt" data-caption="" data-image="images/Self_Portrait_Yellow_Shirt.jpg" data-target="#image-gallery">
-                <br><img width="71px" height="120px" src="images/Self_Portrait_Yellow_Shirt.jpg" class="modal-content img-responsive" title="Self Portrait Yellow Shirt"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="clearfix visible-md-block"></div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Self_Portrait_Green_Shirt.jpg" data-image-id="" data-toggle="modal" data-title="Self Portrait Green Shirt" data-caption="" data-image="images/Self_Portrait_Green_Shirt.jpg" data-target="#image-gallery">
-                <br><img width="94px" height="120px" src="images/Self_Portrait_Green_Shirt.jpg" class="modal-content img-responsive" title="Self Portrait Green Shirt"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/encaustic_portrait.jpg" data-image-id="" data-toggle="modal" data-title="Encaustic Portrait" data-caption="" data-image="images/encaustic_portrait.jpg" data-target="#image-gallery">
-                <br><img width="160px" height="120px" src="images/encaustic_portrait.jpg" class="modal-content img-responsive" title="Encaustic Portrait"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Line_For_Icecream.jpg" data-image-id="" data-toggle="modal" data-title="Line For Icecream" data-caption="" data-image="images/Line_For_Icecream.jpg" data-target="#image-gallery">
-                <br><img width="157px" height="120px" src="images/Line_For_Icecream.jpg" class="modal-content img-responsive" title="Line For Icecream"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="clearfix visible-md-block"></div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Line_For_Food-1.jpg" data-image-id="" data-toggle="modal" data-title="Line For Food-1" data-caption="" data-image="images/Line_For_Food-1.jpg" data-target="#image-gallery">
-                <br><img width="154px" height="120px" src="images/Line_For_Food-1.jpg" class="modal-content img-responsive" title="Line For Food-1"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-              <a class="thumbnail" href="images/Valentine.jpg" data-image-id="" data-toggle="modal" data-title="Valentine" data-caption="" data-image="images/Valentine.jpg" data-target="#image-gallery">
-                <br><img width="141px" height="120px" src="images/Valentine.jpg" class="modal-content img-responsive" title="Valentine"></a>
-              <div class="caption text-center">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-            <div class="clearfix visible-sm-block visible-lg-block"></div>
+      
             <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <a class="thumbnail" href="images/hannah_commision_1.jpg" data-image-id="" data-toggle="modal" data-title="hannah commision 1" data-caption="" data-image="images/hannah_commision_1.jpg" data-target="#image-gallery">
                 <br><img width="96px" height="120px" src="images/hannah_commision_1.jpg" class="modal-content img-responsive" title="hannah commision 1"></a>
