--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -212,7 +212,7 @@
         </ul>
 
       
-            <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
+           <!-- <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <a class="thumbnail" href="images/hannah_commision_1.jpg" data-image-id="" data-toggle="modal" data-title="hannah commision 1" data-caption="" data-image="images/hannah_commision_1.jpg" data-target="#image-gallery">
                 <br><img width="96px" height="120px" src="images/hannah_commision_1.jpg" class="modal-content img-responsive" title="hannah commision 1"></a>
               <div class="caption text-center">Title...year
