--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -88,6 +88,7 @@
                 <img class="text-center" width="282px" height="240px" alt="Valentine"  src="images/Valentine.jpg">
                  <br><span class="text"></span>
             </li>
+            <div class="clearfix visible-lg-block"></div>
             <li>
                 <img class="text-center" width="192px" height="240px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
                  <br><span class="text"></span>
