--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -97,35 +97,35 @@
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="182" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
+                <img class="text-center" width="182px" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="232px" height="240px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
                 <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="242px" height="240px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px alt=""  src="">
+                <img class="text-center" width="204px" height="240px alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="208px" height="240px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="208px" height="240px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="188px" height="240px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="" height="240px" alt=""  src="">
+                <img class="text-center" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="Al_Wright-Choctaw_Hymns.jpg">
                 <br><span class="text"></span>
             </li>
             <li>
