--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -125,7 +125,7 @@
                  <br><span class="text"></span>
             </li>
             <li>
-                <img class="text-center" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="Al_Wright-Choctaw_Hymns.jpg">
+                <img class="text-center" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
                 <br><span class="text"></span>
             </li>
             <li>
