--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -56,77 +56,77 @@
       <div class="container">
         <ul class="row first">
             <li class="text-center">
-                <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
-                <br><span class="text"></span>
+                <img class="text-center" width="182px" height="240px" alt="Selfport with Striped Shirt"  src="images/selfport_striped_shirt.jpg">
+                <br><span class="text">Selfport with Striped Shirt</span>
             </li>
             <li>
-                <img class="text-center" width="150px" height="240px" alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <br><span class="text"></span>
+                <img class="text-center" width="150px" height="240px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <br><span class="text">Self Portrait with Coffee Cup</span>
             </li>
             <li>
-                <img class="text-center" width="142px" height="240px" alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <br><span class="text"></span>
+                <img class="text-center" width="142px" height="240px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <br><span class="text">Self Portrait with Yellow Shirt</span>
             </li>
             <!--<div class="clearfix visible-lg-block"></div>-->
             <li>
-                <img class="text-center" width="188px" height="240px" alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <br><span class="text"></span>
+                <img class="text-center" width="188px" height="240px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <br><span class="text">Self Portrait with Green Shirt</span>
             </li>
             <li>
-                <img class="text-center" width="320px" height="240px" alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
-                <br><span class="text"></span>
+                <img class="text-center" width="320px" height="240px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
+                <br><span class="text">Encaustic Self Portrait #1</span>
             </li>
             <li>
-                <img class="text-center" width="314px" height="240px" alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
-                 <br><span class="text"></span>
+                <img class="text-center" width="314px" height="240px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
+                 <br><span class="text">Line For Icecream</span>
             </li>
             <li>
-                <img class="text-center" width="308px" height="240px" alt="Line For Food 1"  src="images/Line_For_Food-1.jpg">
-                 <br><span class="text"></span>
+                <img class="text-center" width="308px" height="240px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
+                 <br><span class="text">Line For Food #1</span>
             </li>
             <li>
                 <img class="text-center" width="282px" height="240px" alt="Valentine"  src="images/Valentine.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Valentine</span>
             </li>
             <li>
                 <img class="text-center" width="192px" height="240px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Hannah Commision 1</span>
             </li>
             <li>
                 <img class="text-center" width="188px" height="240px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Hannah Commision 2</span>
             </li>
             <li>
                 <img class="text-center" width="182px" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Hannah Commision 3</span>
             </li>
             <li>
                 <img class="text-center" width="232px" height="240px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
-                <br><span class="text"></span>
+                <br><span class="text">Octearaffe-inside</span>
             </li>
             <li>
                 <img class="text-center" width="242px" height="240px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Wolearab-inside</span>
             </li>
             <li>
                 <img class="text-center" width="204px" height="240px alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">David Folsom-Choctaw Hymns</span>
             </li>
             <li>
                 <img class="text-center" width="208px" height="240px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Peter Pitchlynn-Choctaw Hymns</span>
             </li>
             <li>
                 <img class="text-center" width="208px" height="240px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Cyrus Byington-Choctaw Hymns</span>
             </li>
             <li>
                 <img class="text-center" width="188px" height="240px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="text"></span>
+                 <br><span class="text">Rev Folsom-Choctaw Hymns</span>
             </li>
             <li>
                 <img class="text-center" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
-                <br><span class="text"></span>
+                <br><span class="text">Alfred Wright-Choctaw Hymns</span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
