--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -129,43 +129,43 @@
             </li>
             <li>
                 <img class="text-center" width="182px" height="240px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">First Day<br>Bertram Bobb Documentry</span>
+                 <br><span class="text">First Day-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="330px" height="240px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">Kid Fight<br>Bertram Bobb Documentry</span>
+                 <br><span class="text">Kid Fight-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="330px" height="240px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Enlisting<br>Bertram Bobb Documentry</span>
+                <br><span class="text">Enlisting-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="330px" height="240px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Navy Boxing<br>Bertram Bobb Documentry</span>
+                <br><span class="text">Navy Boxing-Bertram Bobb Documentry</span>
             </li>
                   <li>
                 <img class="text-center" width="194px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Golden Glove<br>Bertram Bobb Documentry</span>
+                <br><span class="text">Golden Glove-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="194px" height="240px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">Bertram Bobb Meets Mclemore<br>Bertram Bobb Documentry</span>
+                 <br><span class="text">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="330px" height="240px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
-               <br><span class="text">Bertram Bobb and McLemore<br>Bertram Bobb Documentry</span>
+               <br><span class="text">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="94px" height="240px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Meeting Politicians<br>Bertram Bobb Documentry</span>
+                <br><span class="text">Meeting Politicians-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="340px" height="240px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Bertram Bobb Leading Prayer<br>Bertram Bobb Documentry</span>
+                <br><span class="text">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="206px" height="240px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-               <br><span class="text">Bertram Bobb Portrait<br>Bertram Bobb Documentry</span>
+               <br><span class="text">Bertram Bobb Portrait-Bertram Bobb Documentry</span>
             </li>
             <li>
                 <img class="text-center" width="190px" height="240px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
