--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -56,24 +56,24 @@
       <div class="container">
           <ul class="row first">
             <li class="text-center">
-                <img class="text-center" width="182px" height="240px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
-                <br><span class="text">Self Portrait with Striped Sweater</span>
+                <img class="" width="182px" height="240px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
+                <br><span class="">Self Portrait with Striped Sweater</span>
             </li>
             <li>
-                <img class="text-center" width="150px" height="240px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <br><span class="text">Self Portrait with Coffee Cup</span>
+                <img class="" width="150px" height="240px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <br><span class="">Self Portrait with Coffee Cup</span>
             </li>
             <li>
-                <img class="text-center" width="142px" height="240px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <br><span class="text">Self Portrait with Yellow Shirt</span>
+                <img class="" width="142px" height="240px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <br><span class="">Self Portrait with Yellow Shirt</span>
             </li>
             <li>
-                <img class="text-center" width="188px" height="240px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <br><span class="text">Self Portrait with Green Shirt</span>
+                <img class="" width="188px" height="240px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <br><span class="">Self Portrait with Green Shirt</span>
             </li>
             <li>
-                <img class="text-center" width="320px" height="240px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
-                <br><span class="text">Encaustic Self Portrait #1</span>
+                <img class="" width="320px" height="240px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
+                <br><span class="">Encaustic Self Portrait #1</span>
             </li>
             <li>
                 <img class="text-center" width="314px" height="240px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
@@ -144,11 +144,11 @@
                 <br><span class="text">Navy Boxing-Bertram Bobb Documentry</span>
             </li>
                   <li>
-                <img class="text-center" width="194px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
+                <img class="text-center" width="174px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
                 <br><span class="text">Golden Glove-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="194px" height="240px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
+                <img class="text-center" width="174px" height="240px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
                  <br><span class="text">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
             </li>
             <li>
@@ -156,7 +156,7 @@
                <br><span class="text">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="188px" height="240px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
+                <img class="text-center" width="174px" height="240px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
                 <br><span class="text">Meeting Politicians-Bertram Bobb Documentry</span>
             </li>
             <li>
