--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -76,108 +76,108 @@
                 <br><span class="">Encaustic Self Portrait #1</span>
             </li>
             <li>
-                <img class="text-center" width="314px" height="240px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
-                 <br><span class="text">Line For Icecream</span>
+                <img class="" width="314px" height="240px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
+                 <br><span class="">Line For Icecream</span>
             </li>
             <li>
-                <img class="text-center" width="308px" height="240px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
-                 <br><span class="text">Line For Food #1</span>
+                <img class="" width="308px" height="240px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
+                 <br><span class="">Line For Food #1</span>
             </li>
             <li>
-                <img class="text-center" width="282px" height="240px" alt="Valentine"  src="images/Valentine.jpg">
-                 <br><span class="text">Valentine</span>
+                <img class="" width="282px" height="240px" alt="Valentine"  src="images/Valentine.jpg">
+                 <br><span class="">Valentine</span>
             </li>
             <li>
-                <img class="text-center" width="192px" height="240px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
-                 <br><span class="text">Hannah Commision 1</span>
+                <img class="" width="192px" height="240px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
+                 <br><span class="">Hannah Commision 1</span>
             </li>
             <li>
-                <img class="text-center" width="188px" height="240px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
-                 <br><span class="text">Hannah Commision 2</span>
+                <img class="" width="188px" height="240px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
+                 <br><span class="">Hannah Commision 2</span>
             </li>
             <li>
-                <img class="text-center" width="182px" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
-                 <br><span class="text">Hannah Commision 3</span>
+                <img class="" width="182px" height="240px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
+                 <br><span class="">Hannah Commision 3</span>
             </li>
             <li>
-                <img class="text-center" width="232px" height="240px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
-                <br><span class="text">Octearaffe-inside</span>
+                <img class="" width="232px" height="240px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
+                <br><span class="">Octearaffe-inside</span>
             </li>
             <li>
-                <img class="text-center" width="242px" height="240px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
-                 <br><span class="text">Wolearab-inside</span>
+                <img class="" width="242px" height="240px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
+                 <br><span class="">Wolearab-inside</span>
             </li>
             <li>
-                <img class="text-center" width="204px" height="240px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="text">David Folsom-Choctaw Hymns</span>
+                <img class="" width="204px" height="240px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
+                 <br><span class="">David Folsom-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="text-center" width="208px" height="240px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
-                 <br><span class="text">Peter Pitchlynn-Choctaw Hymns</span>
+                <img class="" width="208px" height="240px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
+                 <br><span class="">Peter Pitchlynn-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="text-center" width="208px" height="240px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
-                 <br><span class="text">Cyrus Byington-Choctaw Hymns</span>
+                <img class="" width="208px" height="240px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
+                 <br><span class="">Cyrus Byington-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="text-center" width="188px" height="240px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
-                 <br><span class="text">Rev Folsom-Choctaw Hymns</span>
+                <img class="" width="188px" height="240px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
+                 <br><span class="">Rev Folsom-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="text-center" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
-                <br><span class="text">Alfred Wright-Choctaw Hymns</span>
+                <img class="" width="192px" height="240px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
+                <br><span class="">Alfred Wright-Choctaw Hymns</span>
             </li>
             <li>
-                <img class="text-center" width="182px" height="240px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">First Day-Bertram Bobb Documentry</span>
+                <img class="" width="182px" height="240px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
+                 <br><span class="">First Day-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="330px" height="240px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">Kid Fight-Bertram Bobb Documentry</span>
+                <img class="" width="330px" height="240px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
+                 <br><span class="">Kid Fight-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="330px" height="240px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Enlisting-Bertram Bobb Documentry</span>
+                <img class="" width="330px" height="240px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
+                <br><span class="">Enlisting-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="330px" height="240px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Navy Boxing-Bertram Bobb Documentry</span>
+                <img class="" width="330px" height="240px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
+                <br><span class="">Navy Boxing-Bertram Bobb Documentry</span>
             </li>
                   <li>
-                <img class="text-center" width="174px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Golden Glove-Bertram Bobb Documentry</span>
+                <img class="" width="174px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
+                <br><span class="">Golden Glove-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="174px" height="240px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
-                 <br><span class="text">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
+                <img class="" width="174px" height="240px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
+                 <br><span class="">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="330px" height="240px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
-               <br><span class="text">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
+                <img class="" width="330px" height="240px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
+               <br><span class="">Bertram Bobb and McLemore-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="174px" height="240px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Meeting Politicians-Bertram Bobb Documentry</span>
+                <img class="" width="174px" height="240px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
+                <br><span class="">Meeting Politicians-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="340px" height="240px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
-                <br><span class="text">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</span>
+                <img class="" width="340px" height="240px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
+                <br><span class="">Bertram Bobb Leading Prayer-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="206px" height="240px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-               <br><span class="text">Bertram Bobb Portrait-Bertram Bobb Documentry</span>
+                <img class="" width="206px" height="240px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
+               <br><span class="">Bertram Bobb Portrait-Bertram Bobb Documentry</span>
             </li>
             <li>
-                <img class="text-center" width="190px" height="240px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
-                <br><span class="text">Surprise Birthday</span>
+                <img class="" width="190px" height="240px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
+                <br><span class="">Surprise Birthday</span>
             </li>
             <li>
-                <img class="text-center" width="310px" height="240px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
-                <br><span class="text">Untitled-Sufi</span>
+                <img class="" width="310px" height="240px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
+                <br><span class="">Untitled-Sufi</span>
             </li>
             <li>
-                <img class="text-center" width="242px" height="240px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
-                <br><span class="text">Darlington Bedroom</span>
+                <img class="" width="242px" height="240px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
+                <br><span class="">Darlington Bedroom</span>
             </li>
           </ul>
         <a href="present.html">(top)</a>
