--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -54,6 +54,7 @@
     </header>
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
+        <div class="wrapper text-center">
           <ul class="row first">
             <li class="text-center">
                 <img class="" width="182px" height="240px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
@@ -180,6 +181,7 @@
                 <br><span class="">Darlington Bedroom</span>
             </li>
           </ul>
+        </div>
         <a href="present.html">(top)</a>
       </div>
     </div><!--#art_storage-->
