--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -54,7 +54,8 @@
     </header>
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
-        <div class="wrapper text-center">
+        <div id="doublewrap">
+        <div id="wrapperDiv">
           <ul class="row first">
             <li class="text-center">
                 <img class="" width="182px" height="240px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
@@ -144,7 +145,7 @@
                 <img class="" width="330px" height="240px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
                 <br><span class="">Navy Boxing-Bertram Bobb Documentry</span>
             </li>
-                  <li>
+            <li>
                 <img class="" width="174px" height="240px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
                 <br><span class="">Golden Glove-Bertram Bobb Documentry</span>
             </li>
@@ -181,6 +182,7 @@
                 <br><span class="">Darlington Bedroom</span>
             </li>
           </ul>
+        </div>
         </div>
         <a href="present.html">(top)</a>
       </div>
