--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,7 +55,7 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
           <ul class="row first">
-            <li class="text-center">
+            <li class="">
                 <img class="" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="">Self Portrait with Striped Sweater</span>
             </li>
