--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -8,19 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/jquery.bsPhotoGallery.css">
-    <script src="js/jquery-1.12.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.bsPhotoGallery.js"></script>
   </head>
-  <script>
-      $(document).ready(function(){
-    $('ul.first').bsPhotoGallery({
-    "classes" : "col-lg-3 col-md-4 col-sm-6 col-xs-12 col-xxs-12",
-    "hasModal" : true
-      });
-    });
-  </script>
   <body>
     <header>
       <nav id="header-nav" class="navbar navbar-default">
@@ -68,11 +56,11 @@
       <div class="container">
           <ul class="row first">
             <li class="">
-                <img class="" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
+                <img class="thumbnail" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="">Self Portrait with Striped Sweater</span>
             </li>
             <li>
-                <img class="" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <img class="thumbnail" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
                 <br><span class="">Self Portrait with Coffee Cup</span>
             </li>
             <li>
@@ -198,6 +186,17 @@
     <footer id="myfoot">
       <div class="text-center">&copy; Copyright....2016  All images are property of Jimi Morris. Original Website by Jimi Morris.</div>
     </footer>
-   
+    <script src="js/jquery-1.12.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.bsPhotoGallery.js"></script>
+    <script>
+        $(document).ready(function(){
+      $('ul.first').bsPhotoGallery({
+      "classes" : "col-lg-3 col-md-4 col-sm-6 col-xs-12 col-xxs-12",
+      "hasModal" : true
+        });
+      });
+    </script>
   </body>
 </html>
