--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,11 +55,11 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
           <ul class="row first">
-            <li class="thumbnail">
+            <li class="">
                 <img class="" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="">Self Portrait with Striped Sweater</span>
             </li>
-            <li class="thumbnail">
+            <li class="">
                 <img class="" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
                 <br><span class="">Self Portrait with Coffee Cup</span>
             </li>
