--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -52,7 +52,7 @@
         </div><!--<.collapse .navbar-collapse-->
       </nav><!-- #header-nav -->
     </header>
-    <div id="art_storage text-center"><!--#art_storage-->
+    <div id="art_storage"><!--#art_storage-->
       <div class="container">
           <ul class="row first">
             <li class="">
