--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,21 +55,21 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
           <ul class="row first">
-            <li class="">
+            <li class="thumbnail">
                 <img class="" width="136.5px" height="180px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
-                <br><span class="">Self Portrait with Striped Sweater</span>
+                <br><span class="caption">Self Portrait with Striped Sweater</span>
             </li>
-            <li class="">
+            <li class="thumbnail">
                 <img class="" width="112.5px" height="180px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <br><span class="">Self Portrait with Coffee Cup</span>
+                <br><span class="caption">Self Portrait with Coffee Cup</span>
             </li>
             <li>
-                <img class="" width="106.5px" height="180px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <br><span class="">Self Portrait with Yellow Shirt</span>
+                <img class="thumbnail" width="106.5px" height="180px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <br><span class="caption">Self Portrait with Yellow Shirt</span>
             </li>
             <li>
-                <img class="" width="141px" height="180px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <br><span class="">Self Portrait with Green Shirt</span>
+                <img class="thumbnail" width="141px" height="180px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <br><span class="caption">Self Portrait with Green Shirt</span>
             </li>
             <li>
                 <img class="" width="240px" height="180px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
